--- a/Mini_Projet/Accueil.css
+++ b/Mini_Projet/Accueil.css
@@ -1,4 +1,4 @@
-*{
+ black;*{
     margin: 0;
     padding: 0;
     color:white;
@@ -18,7 +18,7 @@
     height:60px;
     float:left;
     border:1px solid black;
-    background-color: rgb(36, 27, 46);
+    background-color:#042425;
 }
 .logo
 {
@@ -29,6 +29,180 @@
 .logo img
 {
     width:100%;
+    height:100%;
+    margin-top: -2px;
+}
+p{
+    text-align: center;
+    color:white;
+    padding:10px;
+}
+#milieu
+{
+    width:100%;
+    height:600px;
+    background-image: url(img/img-bg.jpg);
+    border:1px solid black;
+}
+#milieu img
+{
+    width:100%;
+    height:100%;
+}
+#conteneur
+{
+    background-color: white;
+    margin-left:5%;
+    margin-right:5%;
+    margin-top:13%;
+    height:490px;
+}
+#log{
+   background-color: #51bfd0;
+   height: 50px;
+   width:100%;
+   
+}
+h4{
+text-align: center;
+color:white;
+padding: 10px 0px 0px 10px;
+}
+button
+{
+    float:right;
+    color: white;
+    background-color: #3addd6;
+    height: 30px;
+    width: 90px;
+    margin-top: -15px;
+    margin-right:8px;
+}
+#blog1
+{
+    margin-top:5px;
+    width:95%;
+    height:390px;
+    margin-left:5px;
+    margin-right:5px;
+}
+#avatar
+{
+    width:40%;
+    height:370px;
+    float:left;
+    margin-left:5px;
+    border: 2px solid white;
+    background-color:white
+}
+#avatar img{
+	width: 55%;
+    height: 35%;
+    float:left;
+    padding-left: 10px;
+}
+#menu
+{
+    margin-left: 0px;
+    position:relative;
+}
+.ic-liste
+{
+    position: absolute;
+    width:15%;
+    height:40px;
+    margin-left:165px;
+    margin-top:10px;
+    padding:5px;
+}
+.ic-liste img
+{
+    widows: 100%;
+    height:100%;
+}
+.ic-ajout
+{
+    position: absolute;
+    width:15%;
+    height:40px;
+    margin-left:165px;
+    margin-top:10px;
+    padding:7px;
+}
+.ic-ajout img
+{
+    widows: 100%;
+    height:100%;
+}
+#menu ul
+{
+    margin-top:150px;
+    padding:25px;
+    line-height: 30px;
+}
+#menu li
+{
+    float: left;
+    position: relative;
+    background-color: hsla(0, 20%, 98%, 0.972);
+    color:rgb(168, 165, 165);
+}
+#menu ul li a
+{
+    color:rgb(168, 165, 165);
+    text-decoration: none;
+    width: 200px;
+    height: 30px;
+    display: block;
+    text-align: left;
+    border: 2px solid white;
+}
+#menu ul ul
+{ 
+    position: absolute;
+    top: 31px;
+    visibility: hidden;
+}
+#menu ul li:hover ul
+{
+visibility: visible;
+}
+#menu li:hover
+{
+    background-color: cadetblue;
+}
+#menu ul li ul a:hover 
+{
+    background-color: cadetblue;
+    color: white;
+}
+.droite
+{
+    width:55%;
+    height:410px;
+    float:right;
+    margin-left:5px;
+    border: 2px solid white;
+    background-color:rgb(235, 233, 233);
+}
+h5
+{
+    color:#3addd6;
+    padding:10px;
+}
+.blogL{
+    border:1px outset #3addd6;
+    margin-left:5%;
+    margin-right:5%;
+    height:320px;
+    color:silver;
+}
+table, thead, td, tr{
+    width: 80%;
+    height:30px;
+    margin-top:13px;
+    
+}
     height:100%;
     margin-top: -2px;
 }
@@ -103,25 +277,6 @@ button
     padding-top: 10px;
     background-color:cadetblue; 
 }
-#menu
-{
-    margin-left: 0px;
-}
-#menu ul
-{
-    margin-top:150px;
-    padding:25px;
-    line-height: 30px;
-}
-#menu li
-{
-    float: left;
-    position: relative;
-    background-color: hsla(0, 20%, 98%, 0.972);
-    color:rgb(168, 165, 165);
-}
-#menu ul li a
-{
     color:rgb(168, 165, 165);
     text-decoration: none;
     width: 200px;
@@ -136,16 +291,4 @@ button
     top: 31px;
     visibility: hidden;
 }
-#menu ul li:hover ul
-{
-visibility: visible;
-}
-#menu li:hover
-{
-    background-color: cadetblue;
-}
-#menu ul li ul a:hover 
-{
-    background-color: cadetblue;
-    color: white;
-}
+#me
